@@ -57,6 +57,9 @@
 	<LI>HTMLDOC tried to seek backwards when reading HTML
 	from the standard input.
 
+	<LI>The media margin comments did not work properly when
+	the current media orientation was landscape.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.18</H2>
